--- a/src/main/webapp/hotelManage.html
+++ b/src/main/webapp/hotelManage.html
@@ -111,7 +111,7 @@
                 title: '酒店添加',
                 shade: 0.6,
                 shadeClose: true,
-                content: 'iframe_hotelUpdate.html?s=1',
+                content: 'iframe_hotelUpdate.html?s=1&random='+Date.now(),
                 end: function (index, layero) {
                     tab.reload();
                 }
