--- a/src/main/webapp/iframe_pay.html
+++ b/src/main/webapp/iframe_pay.html
@@ -146,7 +146,8 @@
                             return false;
                         }
                         if (rs.success) {
-                            alert("支付成功了")
+                            alert("支付成功了");
+                            parent.window.location.href="home.html";
                             return false;
 
                         }
